[package]
name = "pressure_bot_rust"
version = "0.1.0"
edition = "2021"
authors = ["Alex <puschev.alex@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http'] }
worker-macros = { version = "0.8", features = ['http'] }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
urlencoding = "2.1.3"
base64 = "0.22"